side nav link updated

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -54,18 +54,11 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
         <a href="{% url 'gist:dashboard' %}" class="brand-link">
-            <span class="brand-text font-weight-light">Banquet</span>
+            <span class="brand-text font-weight-bold text-white">Banquet</span>
         </a>
 
         <!-- Sidebar -->
         <div class="sidebar">
-            <!-- Sidebar user panel (optional) -->
-            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
-                </div>
-            </div>
-
             <!-- Sidebar Menu -->
             {% include '_shared/_sidenav.html' %}
             <!-- /.sidebar-menu -->
