--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
           href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'css/adminlte.css' %}">
+    <!-- Custom style -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- overlayScrollbars -->
     <link rel="stylesheet" href="{% static 'plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
     <!-- Google Font: Source Sans Pro -->
