--- a/templates/_shared/_sidenav.html
+++ b/templates/_shared/_sidenav.html
@@ -10,7 +10,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="{% url 'accounts:member-list' %}" class="nav-link">
                 <i class="fas fa-users mr-2"></i>
                 <p>Members</p>
             </a>
