--- a/templates/_shared/_buttons/_add.html
+++ b/templates/_shared/_buttons/_add.html
@@ -1,11 +1,8 @@
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-10">
-        <button class="ladda-button btn btn-primary" data-style="expand-right">
-            <span class="ladda-label">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i> Add
-            </span>
-            <span class="ladda-spinner"></span>
+        <button class="btn btn-primary">
+            <i class="fa fa-plus-circle" aria-hidden="true"></i> Add
         </button>
     </div>
 </div>
