--- a/templates/_shared/_buttons/_delete.html
+++ b/templates/_shared/_buttons/_delete.html
@@ -1,15 +1,9 @@
 <div class="form-group">
-    <button class="ladda-button btn btn-danger" data-style="expand-right">
-            <span class="ladda-label">
-                <i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-            </span>
-        <span class="ladda-spinner"></span>
+    <button class="btn btn-danger">
+        <i class="fas fa-trash-alt" aria-hidden="true"></i> Delete
     </button>
 
-    <button class="ladda-button btn btn-primary" data-style="expand-right" name="cancel">
-            <span class="ladda-label">
-                <i class="fa fa-times" aria-hidden="true"></i> Cancel
-            </span>
-        <span class="ladda-spinner"></span>
+    <button class="btn btn-primary" name="cancel">
+        <i class="fa fa-times" aria-hidden="true"></i> Cancel
     </button>
 </div>
