active link js add

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -86,5 +86,6 @@
 <script src="{% static 'js/adminlte.js' %}"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'js/pages/dashboard.js' %}"></script>
+<script src="{% static 'js/active_link.js' %}"></script>
 </body>
 </html>
