meal add, list, update, detail, delete view implemented

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{% static 'plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+    {% block styles %}{% endblock %}
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -87,5 +89,6 @@
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'js/pages/dashboard.js' %}"></script>
 <script src="{% static 'js/active_link.js' %}"></script>
+{% block scripts %}{% endblock %}
 </body>
 </html>
