--- a/templates/_shared/_sidenav.html
+++ b/templates/_shared/_sidenav.html
@@ -15,5 +15,11 @@
                 <p>Members</p>
             </a>
         </li>
+        <li class="nav-item">
+            <a href="{% url 'meals:meal-list' %}" class="nav-link">
+                <i class="fas fa-users mr-2"></i>
+                <p>Meals</p>
+            </a>
+        </li>
     </ul>
 </nav>
