--- a/templates/_shared/_sidenav.html
+++ b/templates/_shared/_sidenav.html
@@ -16,10 +16,28 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="{% url 'meals:meal-list' %}" class="nav-link">
+            <a href="{% url 'meal_config:meal-list' %}" class="nav-link">
                 <i class="fas fa-users mr-2"></i>
                 <p>Meals</p>
             </a>
+        </li>
+
+        <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+                <i class="fas fa-tools mr-2"></i>
+                <p>
+                    Configuration
+                    <i class="right fas fa-angle-left"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="{% url 'configuration:meal-config-list' %}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Meal Config</p>
+                    </a>
+                </li>
+            </ul>
         </li>
     </ul>
 </nav>
