meal, user generate command add

--- a/templates/meals/detail.html
+++ b/templates/meals/detail.html
@@ -44,16 +44,16 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-3"><strong>Meal date</strong></div>
-                                    <div class="col-md-3">{{ object.meal_date|normalize }}</div>
+                                    <div class="col-md-9">{{ object.meal_date|normalize }}</div>
 
                                     <div class="col-md-3"><strong>Breakfast</strong></div>
                                     <div class="col-md-3">{{ object.breakfast }}</div>
 
                                     <div class="col-md-3"><strong>Lunch</strong></div>
-                                    <div class="col-md-3">{{ object.username }}</div>
+                                    <div class="col-md-3">{{ object.lunch }}</div>
 
                                     <div class="col-md-3"><strong>Dinner</strong></div>
-                                    <div class="col-md-3">{{ object.dinner }}</div>
+                                    <div class="col-md-9">{{ object.dinner }}</div>
 
                                     <div class="col-md-3"><strong>Created by</strong></div>
                                     <div class="col-md-3">{{ object.add_by|normalize }}</div>
