--- a/templates/meals/list.html
+++ b/templates/meals/list.html
@@ -105,8 +105,8 @@
                                         </tr>
                                     {% empty %}
                                         <tr>
-                                            <td colspan="6">
-                                                <h3 class="text-center">Sorry, no roles available.</h3>
+                                            <td colspan="10">
+                                                <h3 class="text-center">Sorry, no meals available.</h3>
                                             </td>
                                         </tr>
                                     {% endfor %}
